// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info command basic info test case 1`] = `
[
  {
    "data": {
      "command": [
        "test",
      ],
      "packageTasks": [
        {
          "command": [],
          "dependencies": [],
          "id": "__start",
          "package": "",
          "task": "__start",
          "weight": 1,
          "workingDirectory": "",
        },
        {
          "command": [
            "node",
            "./test.js",
          ],
          "dependencies": [
            "a#build",
          ],
          "id": "a#test",
          "options": {},
          "package": "a",
          "task": "test",
          "weight": 1,
          "workingDirectory": "packages/a",
        },
        {
          "command": [
            "node",
            "./test.js",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "b#test",
          "options": {},
          "package": "b",
          "task": "test",
          "weight": 1,
          "workingDirectory": "packages/b",
        },
        {
          "command": [
            "node",
            "./build.js",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "a#build",
          "options": {},
          "package": "a",
          "task": "build",
          "weight": 1,
          "workingDirectory": "packages/a",
        },
        {
          "command": [
            "node",
            "./build.js",
          ],
          "dependencies": [
            "__start",
          ],
          "id": "b#build",
          "options": {},
          "package": "b",
          "task": "build",
          "weight": 1,
          "workingDirectory": "packages/b",
        },
      ],
      "scope": [
        "a",
        "b",
      ],
    },
    "level": 30,
    "msg": "info",
  },
]
`;

exports[`info command scoped info test case 1`] = `
[
  {
    "data": {
      "command": [
        "test",
      ],
      "packageTasks": [
        {
          "command": [],
          "dependencies": [],
          "id": "__start",
          "package": "",
          "task": "__start",
          "weight": 1,
          "workingDirectory": "",
        },
        {
          "command": [
            "node",
            "./test.js",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "b#test",
          "options": {},
          "package": "b",
          "task": "test",
          "weight": 1,
          "workingDirectory": "packages/b",
        },
        {
          "command": [
            "node",
            "./build.js",
          ],
          "dependencies": [
            "__start",
          ],
          "id": "b#build",
          "options": {},
          "package": "b",
          "task": "build",
          "weight": 1,
          "workingDirectory": "packages/b",
        },
      ],
      "scope": [
        "b",
      ],
    },
    "level": 30,
    "msg": "info",
  },
]
`;
